style.css
:root {
    font-size: 16px;
    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
    --background-color:#3D3D3D;
    --green: #47E060;
    --text-color: #FFFFFF;

}


* {
    box-sizing: border-box;
}

/* RESET CSS */
h1, h2, h3, h4, h5, h6, p, a, ul, li {
    margin: 0;
    padding: 0;

}

li {
    list-style-type: none;
}



body {
    background-color: var(--background-color);
    color: var(--text-color);
}

.header {
    display: flex;
    justify-content: space-between;
    align-items: center;
    outline: 1px solid red;

}

.header-cross {
    /* color: var(--text-color); */
    /* padding-left: 1.5rem; */
}

/* .header-cross:hover {
    color: rgba(0, 255, 255, 0.8);
} */

.header-playlist-name {
    color: var(--text-color);
}


.container {
    height: 100vh;
    margin: 0 auto;
    outline: 2px solid red;
    display: flex;
    flex-direction: column;
    /* gap: 5rem; */
    /* justify-content: space-between; */
}

@media screen and (min-width: 480px) {
    .container {
        max-width: 480px;
        outline: 2px solid yellow;
    }
}


/* PLAYER SECTION */

#player {
    position: relative;
    display: flex;
    flex-direction: column;
    justify-content: center;
    margin: 1rem;
    outline: 1px solid green;
    height: 40vh;
    margin-bottom: 4rem;
    /* text-align: center; */
}

.player-progression {
    margin: 0 auto;
    width: min(60%, 280px);
    display: flex;
    flex-direction: column;
    align-items: center;
}

.progress-bar {
    width: 100%;
    height: 1.2rem;
    background-color: rgba(255, 0, 0, 0.304);
}

.progress-bar-value {
    width: 1px;
    height: 100%;
    transition: width 1s ease;
    background-color: red;
}




.player-progress-timer {
    font-size: 3rem;
}



.player-score {
    position: absolute;
    left: calc(50% - 2rem);
    bottom: 15%;
    font-size: 1.625rem;
    padding: 0.625rem 1rem;
    border-radius: 2.25rem;
    background-color: var(--green);
}

/* TEST */

/* .progress-circle {
    position: relative;
    box-sizing: border-box;
    font-size: 6em;
    width: 1em;
    height: 1em;
    border-radius: 50%;
    border: .15em solid #CDE;
    background-color: #FFF;
}

.progress-mask {
    position: absolute;
    width: 1em;
    height: 1em;
    background-color: aqua;
} */





.list {
    display: flex;
    flex-direction: column;
    text-align: center;
    gap: 1.625rem;
}

.list-btn {
    padding: 1rem 1.5rem;
    width: min(80%, 320px);
    background: rgba(255, 255, 255, 0.2);
    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
    border-radius: 20px;
    border: none;
    color: var(--text-color);
    cursor: pointer;
}



.list-btn[disabled] {
    opacity: 0.5;
}

@media screen and (min-width: 1024px) {
    .list-btn:hover {
        background-color: rgba(255, 255, 255, 0.6);
        transition: background-color 150ms ease-in-out;
    }

    .list-btn[disabled]:hover {
        background-color: rgba(255, 255, 255, 0.2);
        cursor: not-allowed;
    }
}

